--- a/MobileTodo/app/src/main/res/values/strings.xml
+++ b/MobileTodo/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="home">Home</string>
     <string name="school">School</string>
     <string name="work">Work</string>
+    <string name="Gym">Gym</string>
+    <string name="JavaClass">JavaClass</string>
     <string name="add">Add</string>
     <string name="todo_item">Todo Item</string>
 </resources>
